Добавил отдельную активити под медиатеку. Все спринты до этого был полностью уверен, что кнопка медиатеки должна открывать плеер и запускать последнюю добавленную песню.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
             android:exported="false"
                                     />
         <activity
+            android:name=".mediateka.ui.MediatekaActivity"
+            android:exported="false" />
+        <activity
             android:name=".main.MainActivity"
             android:exported="true">
             <intent-filter>
