--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,10 @@ dependencies {
     implementation "io.insert-koin:koin-android:3.3.0"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.google.code.gson:gson:2.10'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.preference:preference-ktx:1.2.1'
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
@@ -52,12 +52,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
-    implementation "androidx.fragment:fragment-ktx:1.5.7"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
-    def room_version = "2.5.1"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
+    implementation "androidx.fragment:fragment-ktx:1.6.2"
+    implementation "androidx.navigation:navigation-ui-ktx:2.7.7"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+    def room_version = "2.6.1"
     implementation("androidx.room:room-runtime:$room_version")
     kapt("androidx.room:room-compiler:$room_version")
     implementation("androidx.room:room-ktx:$room_version")
+    implementation 'androidx.test:runner:1.4.0'
 }
